# Version-Sentinel

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  plugin.json  release-please-config.json  version-sentinel.sln
.claude-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  (+1 more)
agents/: version-reviewer.md
commands/: check-versions.md  vs-record.md
docs/: versioning.md
hooks/: hooks.json
scripts/: auto-record.sh  check-sidecar.sh  check-versions.sh  detect-install-cmd.sh  detect-manifest-edit.sh  prereq-check.sh  vs-record.sh
tests/: assert.sh  run.sh  test_auto_record.sh  test_check_sidecar.sh  test_circuit_breaker.sh  test_coalesce.sh  test_detect_install_cmd.sh  test_detect_manifest_edit.sh  test_etag_cache.sh  test_harness.sh  test_lockfile.sh  test_options_lib.sh  test_parse_cargo.sh  test_parse_csproj.sh  test_parse_dispatch.sh  test_parse_install_cmd.sh  test_parse_npm.sh  test_parse_pip.sh  test_parse_pyproject.sh  test_prereq_check.sh  test_registries_offline.sh  test_retry.sh  test_sidecar.sh  test_vs_record.sh  test_vs_record_validation.sh
tests/fixtures/: Cargo.toml  Demo.csproj  bash_npm_install.json  bash_pip_install.json  edit_input_add_lodash.json  multiedit_input_bump.json  package.json  package_no_deps.json  pyproject.toml  registry_crates_serde.json  registry_npm_lodash.json  registry_nuget_newtonsoft.json  registry_pypi_requests.json  requirements.txt  requirements_tricky.txt  sidecar_one_entry.json  write_input_new_package.json
(+16 files in other folders)
