[project]
name = "demo"
version = "0.1.0"
dependencies = [
  "requests==2.31.0",
  "flask>=3.0.0",
]

[project.optional-dependencies]
dev = ["pytest==8.0.0"]

[tool.poetry.dependencies]
python = "^3.11"
click = "^8.1.7"
pydantic = { version = "2.5.3", extras = ["email"] }

[tool.poetry.group.dev.dependencies]
mypy = "1.8.0"
